k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ecommerce
spec:
  selector:
    app: ecommerce
  ports:
    - port: 80
      targetPort: 80
