k8s/ingress.yaml
# Expose le site via l'Ingress Controller Nginx (installé dans k3s sur le
# namespace ingress-nginx) sur https://www.ecommerce.lcl
# (domaine déclaré dans /etc/hosts). Redirige le HTTP vers HTTPS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.ecommerce.lcl
      secretName: ecommerce-tls
  rules:
    - host: www.ecommerce.lcl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
